--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    // Architecture Component
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:viewmodel:1.1.0"
+
     // Dagger Library
     implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
     implementation 'com.android.support:support-v4:26.1.0'
