--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,22 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+// used by Room, to test migrations
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
     }
+
+    // used by Room, to test migrations
+    sourceSets {
+        androidTest.assets.srcDirs +=
+                files("$projectDir/schemas".toString())
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,6 +44,10 @@ dependencies {
     // Architecture Component
     implementation "android.arch.lifecycle:extensions:1.1.0"
     implementation "android.arch.lifecycle:viewmodel:1.1.0"
+
+    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
 
     // Dagger Library
     implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
@@ -54,6 +73,8 @@ dependencies {
 
     //Glide Library
     compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+
+    implementation 'com.google.code.gson:gson:2.8.0'
 
     // Unit Test Library
     testImplementation 'junit:junit:4.12'
