Include branches to travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: android
 sudo: required
 jdk: oraclejdk8
 
+# safelist
+branches:
+  only:
+  - master
+  - develop
+
 android:
   components:
   # Uncomment the lines below if you want to
