--- a/.travis.yml
+++ b/.travis.yml
@@ -15,27 +15,22 @@ android:
   # - tools
   # - platform-tools
 
-  env:
-    global:
-      -ANDROID_API = 26
-      -ANDROID_BUILD_TOOLS = 26.1.0
-      -ADB_INSTALL_TIMEOUT=5 # minutes
-
   # The BuildTools version used by your project
-  - build-tools-$ANDROID_BUILD_TOOLS
+  - build-tools-26.1.0
 
   # The SDK version used to compile your project
-  - android-$ANDROID_API
+  - android-26
 
   # Additional components
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
 
- 
-
-  before_install:
-  - chmod +x gradlew
-
-  script:
-  - ./gradlew build
+  before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+  cache:
+    directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
