--- a/.travis.yml
+++ b/.travis.yml
@@ -45,3 +45,5 @@ android:
 
 script:
   - ./gradlew assembleFlavoroneDebug  --info
+
+after_failure: "cat $TRAVIS_BUILD_DIR/app/build/outputs/lint-results-debug.xml"
